# xsqlite

./: .gitignore  README.rst  meson.build  pyproject.toml
exts/: meson.build
exts/math/: meson.build  xsqlitemath.c
exts/strings/: libxsqlitestrings.version  meson.build  xsqlitestrings.cc
src/xsqlite/: __init__.py  _core.py
